cmake_minimum_required(VERSION 3.20)
project(CProgLinux C)

set(CMAKE_C_STANDARD 11)

add_executable(ex010101 Unit-1.1/ex010101.c)
add_executable(pr010102 Unit-1.1/pr010102.c)
add_executable(ex010103 Unit-1.1/ex010103.c)
add_executable(pr010104 Unit-1.1/pr010104.c)
add_executable(ex010105 Unit-1.1/ex010105.c)
add_executable(ex010106 Unit-1.1/ex010106.c)
add_executable(ex010107 Unit-1.1/ex010107.c)
add_executable(pr010108 Unit-1.1/pr010108.c)
add_executable(ex010109 Unit-1.1/ex010109.c)
add_executable(pr010110 Unit-1.1/pr010110.c)
add_executable(ex010111 Unit-1.1/ex010111.c)
add_executable(pr010112 Unit-1.1/pr010112.c)
add_executable(ex010113 Unit-1.1/ex010113.c)
add_executable(pr010114 Unit-1.1/pr010114.c)
add_executable(ex010115 Unit-1.1/ex010115.c)
add_executable(ex010116 Unit-1.1/ex010116.c)
add_executable(ex010117 Unit-1.1/ex010117.c)
add_executable(ex010118 Unit-1.1/ex010118.c)
add_executable(pr010119 Unit-1.1/pr010119.c)
add_executable(ex010120 Unit-1.1/ex010120.c)

add_executable(ex010201 Unit-1.2/ex010201.c)
add_executable(ex010202 Unit-1.2/ex010202.c)
add_executable(pr010203 Unit-1.2/pr010203.c)
add_executable(ex010204 Unit-1.2/ex010204.c)
add_executable(ex010205 Unit-1.2/ex010205.c)
add_executable(ex010206 Unit-1.2/ex010206.c)
add_executable(ex010207 Unit-1.2/ex010207.c)
add_executable(ex010208 Unit-1.2/ex010208.c)
add_executable(ex010209 Unit-1.2/ex010209.c)
add_executable(ex010210 Unit-1.2/ex010210.c)
add_executable(pr010211 Unit-1.2/pr010211.c)
add_executable(ex010212 Unit-1.2/ex010212.c)
add_executable(ex010213 Unit-1.2/ex010213.c)
add_executable(ex010214 Unit-1.2/ex010214.c)
add_executable(pr010215 Unit-1.2/pr010215.c)
add_executable(ex010216 Unit-1.2/ex010216.c)
add_executable(pr010217 Unit-1.2/pr010217.c)

add_executable(ex010301 Unit-1.3/ex010301.c)
add_executable(pr010302 Unit-1.3/pr010302.c)
add_executable(ex010303 Unit-1.3/ex010303.c)
add_executable(ex010304 Unit-1.3/ex010304.c)
add_executable(pr010305 Unit-1.3/pr010305.c)
add_executable(ex010306 Unit-1.3/ex010306.c)
add_executable(ex010307 Unit-1.3/ex010307.c)
add_executable(ex010308 Unit-1.3/ex010308.c)
add_executable(pr010309 Unit-1.3/pr010309.c)
add_executable(ex010310 Unit-1.3/ex010310.c)
add_executable(ex010311 Unit-1.3/ex010311.c)
add_executable(pr010312 Unit-1.3/pr010312.c)
add_executable(ex010313 Unit-1.3/ex010313.c)
add_executable(pr010314 Unit-1.3/pr010314.c)
add_executable(ex010315 Unit-1.3/ex010315.c)
add_executable(pr010316 Unit-1.3/pr010316.c)
add_executable(ex010317 Unit-1.3/ex010317.c)
add_executable(pr010318 Unit-1.3/pr010318.c)
add_executable(pr010319 Unit-1.3/pr010319.c)
add_executable(pr010320 Unit-1.3/pr010320.c)

add_executable(ex020101 Unit-2.1/ex020101.c)
add_executable(ex020102 Unit-2.1/ex020102.c)
add_executable(ex020103 Unit-2.1/ex020103.c)
add_executable(pr020104 Unit-2.1/pr020104.c)
add_executable(sol020104 Unit-2.1/sol020104.c)
add_executable(pr020105 Unit-2.1/pr020105.c)
add_executable(sol020105 Unit-2.1/sol020105.c)
